[gd_scene load_steps=26 format=3 uid="uid://po63m4srixl4"]

[ext_resource type="PackedScene" uid="uid://cf0w0skqs3k64" path="res://Scenes/player.tscn" id="2_21dfl"]
[ext_resource type="PackedScene" uid="uid://c67s0aj8w6eoc" path="res://Animated Platformer Character/Ground.tscn" id="2_okl2h"]
[ext_resource type="PackedScene" uid="uid://dw2xuk2bh1woo" path="res://Animated Platformer Character/Pond.tscn" id="3_ad2i4"]
[ext_resource type="Script" uid="uid://doc1xh7xpmt6i" path="res://Scripts/DeadZone.gd" id="4_8ry15"]
[ext_resource type="PackedScene" uid="uid://brrb7c08jiiiq" path="res://Animated Platformer Character/Waterfall.tscn" id="4_okl2h"]
[ext_resource type="PackedScene" uid="uid://bk5n0tn4k1l0c" path="res://Scenes/Coin.tscn" id="5_4fiv6"]
[ext_resource type="PackedScene" uid="uid://baxyg1igjpjr0" path="res://Animated Platformer Character/Cumulus Clouds 5.tscn" id="5_ad2i4"]
[ext_resource type="PackedScene" uid="uid://cafiqi0wm4tja" path="res://Animated Platformer Character/Rainbow With Clouds.tscn" id="6_3tqca"]
[ext_resource type="Script" uid="uid://bhyijm1paxhbf" path="res://Scripts/GameManager.gd" id="6_8fvkd"]
[ext_resource type="Texture2D" uid="uid://cnbbny7qjh2xn" path="res://Assets/Textures/coin.png" id="7_ow7xm"]
[ext_resource type="PackedScene" uid="uid://cikldubtcrvn7" path="res://Animated Platformer Character/Earth.tscn" id="7_sx1u2"]
[ext_resource type="Script" uid="uid://cbscm504wrut0" path="res://Scripts/GameUI.gd" id="7_x8whp"]
[ext_resource type="PackedScene" uid="uid://bpbtrem0e6x7f" path="res://Animated Platformer Character/Flag.tscn" id="8_tse6v"]
[ext_resource type="Texture2D" uid="uid://hk3gj75327hy" path="res://Assets/Textures/Logo.png" id="9_46gx6"]
[ext_resource type="Texture2D" uid="uid://vwcqihxeohck" path="res://Animated Platformer Character/download.jpg" id="9_q14uu"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_yidtr"]
panorama = ExtResource("9_q14uu")

[sub_resource type="Sky" id="Sky_t5fyi"]
sky_material = SubResource("PanoramaSkyMaterial_yidtr")

[sub_resource type="Environment" id="Environment_g4ka7"]
background_mode = 2
background_color = Color(0.764706, 0.764706, 0.764706, 1)
sky = SubResource("Sky_t5fyi")
sky_rotation = Vector3(0, 0.994838, 0)
ambient_light_source = 2
ambient_light_color = Color(0.662745, 0.694118, 0.772549, 1)
ambient_light_energy = 1.15
tonemap_mode = 2
tonemap_exposure = 0.75
ssr_enabled = true
ssao_enabled = true
ssao_radius = 0.45
ssao_intensity = 1.0
ssao_power = 15.0
ssil_enabled = true
sdfgi_use_occlusion = true
glow_enabled = true
glow_intensity = 2.0
fog_light_color = Color(0.647059, 0.678431, 0.72549, 1)
volumetric_fog_temporal_reprojection_enabled = false
adjustment_enabled = true
adjustment_brightness = 1.06
adjustment_contrast = 0.95
adjustment_saturation = 1.09

[sub_resource type="SystemFont" id="SystemFont_om7om"]
font_names = PackedStringArray("Star Choco")

[sub_resource type="SystemFont" id="SystemFont_ub50t"]
font_names = PackedStringArray("Star Choco")

[sub_resource type="BoxShape3D" id="BoxShape3D_asf4q"]
size = Vector3(128, 17, 112)

[sub_resource type="SystemFont" id="SystemFont_1ixsq"]
font_names = PackedStringArray("Star Choco")
multichannel_signed_distance_field = true

[sub_resource type="SystemFont" id="SystemFont_656xb"]
font_names = PackedStringArray("Star Choco")

[sub_resource type="LabelSettings" id="LabelSettings_igq7x"]
font = SubResource("SystemFont_656xb")
font_size = 50
font_color = Color(0.996094, 0.691406, 0.261719, 1)

[sub_resource type="LabelSettings" id="LabelSettings_sx1u2"]
font_size = 80
font_color = Color(1, 1, 1, 0.752941)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[node name="DemoScene" type="Node3D"]

[node name="Player" parent="." instance=ExtResource("2_21dfl")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="Platforms" type="Node3D" parent="."]

[node name="Ground" parent="Platforms" instance=ExtResource("2_okl2h")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 3.59396, 0.645303)

[node name="Ground2" parent="Platforms" instance=ExtResource("2_okl2h")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.00814915, 4.17184, -10.4566)

[node name="Ground3" parent="Platforms" instance=ExtResource("2_okl2h")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0.00814915, 5.3025, -20.7909)

[node name="Ground4" parent="Platforms" instance=ExtResource("2_okl2h")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 8.80784, 6.4898, -20.7909)

[node name="Pond" parent="Platforms" instance=ExtResource("3_ad2i4")]
transform = Transform3D(0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 17.2635, 8.01732, -20.8532)

[node name="Pond2" parent="Platforms" instance=ExtResource("3_ad2i4")]
transform = Transform3D(0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 18.2818, 9.1816, -10.793)

[node name="Pond3" parent="Platforms" instance=ExtResource("3_ad2i4")]
transform = Transform3D(0.03, 0, 0, 0, 0.03, 0, 0, 0, 0.03, 17.2635, 10.5952, -1.45492)

[node name="Waterfall" parent="Platforms" instance=ExtResource("4_okl2h")]
transform = Transform3D(-0.06, 0, -5.24537e-09, 0, 0.06, 0, 5.24537e-09, 0, -0.06, 9.04819, 11.0125, 2.71562)

[node name="Waterfall2" parent="Platforms" instance=ExtResource("4_okl2h")]
transform = Transform3D(0.06, 0, 0, 0, 0.06, 0, 0, 0, 0.06, 0.763835, 12.3462, -5.55151)

[node name="Cumulus Clouds 5" parent="Platforms" instance=ExtResource("5_ad2i4")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -5.85082, 15.0321, -1.83892)

[node name="Cumulus Clouds 6" parent="Platforms" instance=ExtResource("5_ad2i4")]
transform = Transform3D(-2.18557e-07, 0, 5, 0, 5, 0, -5, 0, -2.18557e-07, -10.9503, 15.4999, -3.88549)

[node name="Root Scene" parent="Platforms" instance=ExtResource("6_3tqca")]
transform = Transform3D(15, 0, 0, 0, -0.267807, -14.9976, 0, 14.9976, -0.267807, -14.1547, 15.7528, -3.76552)

[node name="Root Scene2" parent="Platforms" instance=ExtResource("6_3tqca")]
transform = Transform3D(15, 0, 0, 0, -0.267807, -14.9976, 0, 14.9976, -0.267807, -17.6239, 15.7528, -2.1148)

[node name="Root Scene3" parent="Platforms" instance=ExtResource("6_3tqca")]
transform = Transform3D(15, 0, 0, 0, -0.267807, -14.9976, 0, 14.9976, -0.267807, -20.717, 15.7528, -3.76552)

[node name="Root Scene4" parent="Platforms" instance=ExtResource("6_3tqca")]
transform = Transform3D(15, 0, 0, 0, -0.267807, -14.9976, 0, 14.9976, -0.267807, -23.0598, 15.7528, -2.06249)

[node name="Root Scene5" parent="Platforms" instance=ExtResource("6_3tqca")]
transform = Transform3D(15, 0, 0, 0, -0.267807, -14.9976, 0, 14.9976, -0.267807, -26.826, 15.7528, -3.76552)

[node name="Earth" parent="Platforms" instance=ExtResource("7_sx1u2")]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, -32.2445, 14.203, -3.33902)

[node name="Flag" parent="Platforms" instance=ExtResource("8_tse6v")]
transform = Transform3D(-0.102415, 0, -0.692467, 0, 0.7, 0, 0.692467, 0, -0.102415, -32.5371, 17.5375, -3.78762)

[node name="Environment" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment"]
environment = SubResource("Environment_g4ka7")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(-0.898603, 0.438763, 5.7234e-08, 0.146657, 0.300359, 0.942484, 0.413527, 0.846919, -0.334251, 9.04457, 11.5207, -28.4749)
shadow_enabled = true

[node name="Extras" type="Node3D" parent="."]

[node name="SpawnPosition" type="Marker3D" parent="Extras"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0)

[node name="Sprite3D" type="Sprite3D" parent="Extras"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 15, -40)
texture = ExtResource("9_46gx6")

[node name="Features" type="Label3D" parent="Extras"]
transform = Transform3D(0.387789, 0, 0.921748, 0, 1, 0, -0.921748, 0, 0.387789, -14.0511, 5.78537, -6.67751)
text = "Features:
Working Controller
Double Jump
Basic Score System
Animations"
font = SubResource("SystemFont_om7om")
font_size = 250
outline_size = 0
uppercase = true

[node name="Credits" type="Label3D" parent="Extras"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.0336823, 4.71136, 8.82437)
text = "Platform Models By: Rayyan Aziz
Character By: GDQuest
Programming & Level Design: Adil Shafiq"
font = SubResource("SystemFont_ub50t")
font_size = 100
outline_size = 0
uppercase = true

[node name="Coins" type="Node3D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.94922, -11)

[node name="Coin2" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.08376, -21.6303)

[node name="Coin3" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.14233, 7.06635, -20.9353)

[node name="Coin4" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8983, 8.76539, -20.793)

[node name="Coin5" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8983, 9.70155, -9.79296)

[node name="Coin6" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 17.8983, 11.2193, -1.46)

[node name="Coin7" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.07345, 12.8504, 1.71963)

[node name="Coin8" parent="Coins" instance=ExtResource("5_4fiv6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.405344, 14.0283, -3.7453)

[node name="GameManager" type="Node3D" parent="."]
script = ExtResource("6_8fvkd")

[node name="DeadZone" type="Area3D" parent="."]
script = ExtResource("4_8ry15")

[node name="CollisionShape3D" type="CollisionShape3D" parent="DeadZone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -9, 0)
shape = SubResource("BoxShape3D_asf4q")

[node name="UserInterface" type="CanvasLayer" parent="."]

[node name="GameUI" type="Control" parent="UserInterface"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("7_x8whp")

[node name="CoinTexture" type="TextureRect" parent="UserInterface/GameUI"]
layout_mode = 0
offset_left = 32.0
offset_top = 31.0
offset_right = 122.0
offset_bottom = 121.0
texture = ExtResource("7_ow7xm")
expand_mode = 1
stretch_mode = 4

[node name="CoinsLabel" type="Label" parent="UserInterface/GameUI"]
layout_mode = 0
offset_left = 136.0
offset_top = 50.0
offset_right = 193.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0.996094, 0.710938, 0.261719, 1)
theme_override_colors/font_outline_color = Color(0.644531, 0.410156, 0.1875, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_1ixsq")
theme_override_font_sizes/font_size = 48
text = "X 3"
label_settings = SubResource("LabelSettings_igq7x")

[node name="TimeLabel" type="Label" parent="UserInterface/GameUI"]
layout_mode = 0
offset_right = 1918.0
offset_bottom = 133.0
text = "0"
label_settings = SubResource("LabelSettings_sx1u2")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="DeadZone" to="DeadZone" method="_on_body_entered"]
